tests/snapshots/run_wpt_conformance__trtx_argMax_float16_4D_tensor__axis_3__options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "arg_min_max.https.any.js",
    "argMax float16 4D tensor, axis=3, options.keepDimensions=false",
    "trtx",
    Failed {
        msg: Some(
            "arg_min_max :: argMax float16 4D tensor, axis=3, options.keepDimensions=false: index 0: actual=1073741824 expected=2 tolerance=0\n  inputs: argMaxInput: [-51.09375, -6.5390625, 73.8125, 88.4375, -5.29296875, -79.1875, -41.6875, 73.8125, 88.4375, -84.9375, -61.5, -98.3125, -51.09375, -6.5390625, 73.8125, 88.4375, -5.29296875, -79.1875, -41.6875, 73.8125, 88.4375, -84.9375, -61.5, -98.3125]\n  expected argMaxOutput: [2, 0, 2, 1, 2, 0, 2, 1]\n  actual argMaxOutput: [1073741824, 0, 1073741824, 1065353216, 1073741824, 0, 1073741824, 1065353216]\n  expected argMaxOutput full nd:\n(shape [2, 1, 4])\n[2, 0, 2, 1, 2, 0, 2, 1]\n  actual argMaxOutput full nd:\n(shape [2, 1, 4])\n[1073741824, 0, 1073741824, 1065353216, 1073741824, 0, 1073741824, 1065353216]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    argMaxInput: f16[2, 1, 4, 3];\n  }\n\n  nodes {\n    [argMaxOutput] = argMax(argMaxInput, keepDimensions=false, label=\"\", outputDataType=\"int32\");\n  }\n\n  outputs { argMaxOutput; }\n}\n",
        ),
    },
)
